<resources>
    <string name="app_name">daytime_photo</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="photo_of_the_earth">Photo of the Earth</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="HD">HD</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="error">Ошибка</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="pink_theme">Розовая</string>
    <string name="default_theme">Стандартная</string>
    <string name="earth_tab_text">EARTH</string>
    <string name="mars_tab_text">MARS</string>
    <string name="weather_tab_text">WEATHER</string>
    <string name="date_chips">Дата</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="long_string">Космос — это бескрайнее пространство, окружающее Землю, со всеми его планетами, звездами, и огромным количеством других объектов. Многие из них продолжают рождаться и умирать, подобно черным дырам или сверхновым, взрывы которых периодически фиксируют телескопы.

Мы готовы ответить на самые популярные ваши вопросы о космосе: почему в космосе невесомость и как она разрушает кости человека? Как возник космос или откуда появился? Что станет с человеком, если он умрет в открытом космосе?

А как насчет философских вопросов: откуда появился космос или что вообще представляет собой наша вселенная? Можно ли путешествовать сквозь пространство и время, воспользовавшись порталами? В конце концов, существует ли жизнь на Марсе? Ответы на эти и другие, не менее интересные вопросы, вы сможете найти у нас на сайте!</string>
    <string name="transitions">Переходы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>